# quota

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SHA256SUMS.txt  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: windows-build.yml
quota-vscode/: .vscodeignore  LICENSE  README.md  package-lock.json  package.json  quota-ai-usage-tracker-1.0.0.vsix  quota-ai-usage-tracker-1.0.1.vsix  quota-ai-usage-tracker-1.0.2.vsix  quota-ai-usage-tracker-1.0.3.vsix  quota-ai-usage-tracker-1.0.4.vsix  quota-vscode-1.0.0.vsix  tsconfig.json
quota-vscode/src/: antigravityProvider.ts  antigravityUsage.ts  claudeProvider.ts  claudeUsage.ts  codexProvider.ts  configuration.ts  constants.ts  extension.ts  format.ts  githubCopilotProvider.ts  githubCopilotUsage.ts  kiroProvider.ts  kiroUsage.ts  panel.ts  statusBar.ts  summary.ts  types.ts
quota-vscode/test/: antigravityUsage.test.js  claudeProvider.test.js  githubCopilotProvider.test.js  kiroUsage.test.js
scripts/: run-tauri.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: antigravity.rs  claude.rs  codex.rs  cursor.rs  github_copilot.rs  kiro.rs  lib.rs  main.rs
src-tauri/tests/: antigravity_integration.rs  claude_integration.rs  codex_integration.rs
src/components/: IntegrationCard.tsx
src/data/: antigravity.ts  claude.ts  codex.ts  cursor.ts  githubCopilot.ts  integrations.ts  kiro.ts
src/styles/: global.css
